--- a/Innovation Cloud/css/main.css
+++ b/Innovation Cloud/css/main.css
@@ -64,10 +64,59 @@ body {
 	padding:0 10px;
 }
 
+.info .container{
+	background-color: white;
+	margin: 0;
+	display:block;
+	padding: 60px 0;
+}
+
+.info .container h1{
+	font-size: 30px;
+}
+
+.info .container p{
+	font-weight: 200;
+}
+
+#cloud-img{
+	float: left;
+	height: 220px;
+	width: 220px;
+	margin: 60px 60px;
+}
+
+.bot-div{
+	background-image: url("https://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/jumbotron_bg.jpg");
+	background-size: cover;
+	height: 700px;
+	text-align: right;
+}
+
+.bot-div .container{
+	color: #B8E6E6;
+	padding-top: 200px;
+}
+
+.bot-div .container h1{
+	color: white;
+}
+
+.bot-div .container p{
+	line-height: 60px;
+}
+
+
 .btn:hover, .nav ul li:hover {
 	background: #117bff;
 	cursor: pointer; 
 	transition: background .5s;  
+}
+
+.mark .container{
+	color: #B8E6E6;
+	line-height: 50px;
+	padding: 10px;
 }
 
 /*
